# Process-Library

./: .clang-format  CMakeLists.txt  main.cpp  pipe_server.cpp  subprocess.cpp  win_process.cpp
Pipes/: pipe.hpp  pipe_client.hpp  pipe_server.hpp  pipes.hpp
Process/: process.hpp  win_process.hpp
src/: pipe.cpp  pipe_client.cpp
